--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+	outline: none;
 }
 body {
 	background-image: url('./img/bg.png');
@@ -47,6 +48,7 @@ button:hover {
 	background-color: white;
 }
 .moduleWindow {
+	font-family: Arial, Helvetica, sans-serif;
 	display: none;
 	position: absolute;
 	width: 33rem;
@@ -59,4 +61,11 @@ button:hover {
 	justify-content: center;
 	align-items: center;
 	
+}
+.moduleWindow>input{
+	border: none;
+	border-bottom: 1px solid ;
+}
+.moduleWindow>input:focus{
+	border-bottom-color: #FF8000;
 }
