--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
 	background-image: url('./img/bg.png');
 	background-size: cover;
 }
+.bird {
+      position: absolute;
+      width: 40px;
+      transition: transform 0.05s linear;
+      pointer-events: none;
+}
 .containers {
 	display: flex;
 	justify-content: center;
