--- a/src/components/header.module.scss
+++ b/src/components/header.module.scss
@@ -1,7 +1,6 @@
 header{
-    display: flex
-;
-    background-color: #032263;
+    display: flex;
+    background-color: #0321636c ;
     height: 4rem;
     width: 100%;
     align-items: center;
