--- a/src/styles/SimulationCanvas.css
+++ b/src/styles/SimulationCanvas.css
@@ -1,10 +1,28 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
 .canvas-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: transparent;
 }
 
-
+.bird-counter{
+    display: flex;
+    margin-top: 1rem;
+    gap: 1rem;
+    color: rgb(255, 255, 255);
+}
+.hawk, .dove{
+  display: flex;
+  justify-content: center;
+  border-radius: 10px;
+  font-family: 'Roboto', sans-serif;
+  background-color: #1586a6de;
+  box-shadow: 9px 6px 14px gray;
+  width: 8rem;
+  height: 2.5rem;
+  font-size: 13px;
+}
 
 
 .simulation-canvas {
