--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -4,7 +4,8 @@
   align-items: center;
   font-family: Arial, sans-serif;
   background-image: url('/image/bg.jpg');
-  background-size: cover;
+  background-size: 80rem 37rem;
+  background-repeat: no-repeat;
   min-height: 100vh;
 }
 
