--- a/src/styles/SimulationCanvas.scss
+++ b/src/styles/SimulationCanvas.scss
@@ -9,15 +9,15 @@
 .bird-counter {
   display: flex;
   align-items: center;
-  width: 55rem;
+  width: 45rem;
   gap: 1rem;
-  height: 3rem;
+  height: 2rem;
   margin-top: 1rem;
   background-color: #0093e3;
   color: rgb(255, 255, 255);
   font-weight: bold;
   font-family: "Roboto", sans-serif;
-  border-radius: 10px;
+  border-radius: 5px;
   box-shadow: 5px 4px 5px gray;
 }
 .hawk,
@@ -29,8 +29,11 @@
   width: 7rem;
   padding: 3px;
   height: 2rem;
-  font-size: 14px;
 }
+
+p{
+    font-size: 12px;
+  }
 
 .simulation-canvas {
   width: 1422px;
